# slack_notifier_airflow

./: setup.cfg
slack_notifier_airflow/: slack_notifier.py
slack_notifier_airflow.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
