[metadata]
name = slack_notifier_airflow
version = 0.0.1
author = Sayat Bekbolat
author_email = bekbolat.sayat@gmail.com
description = For getting alerts from airflow in a Slack channel
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jamescalam/aesthetic_ascii
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True